--- a/.npmignore
+++ b/.npmignore
@@ -2,16 +2,15 @@
 node_modules
 npm-debug.log
 coverage
-webpack.config.min.js
-webpack.config.dev.js
-webpack.config.umd.js
-readme.md
-postcss.config.js
-index.js
-index.html
-.gitignore
-.npmignore
-.editorconfig
-.babelrc
-tools
-src
+/webpack.config.min.js
+/webpack.config.dev.js
+/webpack.config.umd.js
+/postcss.config.js
+/index.js
+/index.html
+/.gitignore
+/.npmignore
+/.editorconfig
+/.babelrc
+/tools
+/src
