--- a/.npmignore
+++ b/.npmignore
@@ -1,16 +1,4 @@
-.idea
-node_modules
-npm-debug.log
-coverage
-/webpack.config.prod.js
-/webpack.config.dev.js
-/webpack.config.umd.js
-/postcss.config.js
-/index.js
-/index.html
-/.gitignore
-/.npmignore
-/.editorconfig
-/.babelrc
-/tools
-/src
+*
+!/dist
+!/package.json
+!/README.md
